Upgrade project with SDK
Signed-off-by: Jiří Janoušek <janousek.jiri@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ eu.tiliado.WebRuntimeAppPocketCasts.appdata.xml
 eu.tiliado.WebRuntimeAppPocketCasts.desktop
 eu.tiliado.WebRuntimeAppPocketCasts.service
 nuvola-app-pocket-casts.metainfo.xml
+/screenshots/
